update footer replacing <div> with <footer> for sematic clarity
git add index.html

--- a/index.html
+++ b/index.html
@@ -61,11 +61,10 @@
             </p>
         </article>
         
-
     </main>
 
-    <div class="footer">
-        <div>&copy; 2025 BigFootShadow4509</div>
-    </div>
+    <footer>
+        <p>&copy; 2025 BigFootShadow4509</p>
+    </footerfooter>
 </body>
 </html>
